--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,12 +40,16 @@ dependencies:
   get_it: ^8.2.0
   go_router: ^16.2.0
   google_fonts: ^6.3.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   url_launcher: ^6.3.2
 
 dev_dependencies:
+  build_runner: ^2.10.1
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
+  hive_generator: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
